--- a/shop.html
+++ b/shop.html
@@ -142,7 +142,7 @@
                 <br>
                 <div class="shopprr">
                     <div class="shoppr">
-                        <a href="item.html"><img src="D:\shop\pics\cloth_1.jpg" height="150px"></a>
+                        <a href="item.html"><img src="pics\cloth_1.jpg" height="150px"></a>
                         <h4 class="items">Tank Top</h4>
                         <p class="dis">Finding Your Perfect t-shirt</p>
                         <h5 class="price">50$</h5>
