--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
                     <th>Remove</th>
                 </tr>
                 <tr>
-                    <td><img src="D:\shop\pics\cloth_1.jpg" alt="" height="170px"></td>
+                    <td><img src="pics\cloth_1.jpg" alt="" height="170px"></td>
                     <td> Top Tank T-shirt</td>
                     <td>49$</td>
                     <td><input type="button" value="+" class="plus">
@@ -88,7 +88,7 @@
                     <td class="vc"><a href="#"><i class="fa-solid fa-xmark"></i></a></td>
                 </tr>
                 <tr>
-                    <td><img src="D:\shop\pics\shoe_1.jpg" alt="" height="170px"></td>
+                    <td><img src="pics\shoe_1.jpg" alt="" height="170px"></td>
                     <td> Corater</td>
                     <td>49$</td>
                     <td><input type="button" value="+" class="plus">
@@ -178,7 +178,7 @@
                 <h3>Promo</h3>
                 <br>
                <div class="fphoto">
-                <img src="D:\shop\pics\shoe.png" height="90px">
+                <img src="pics\shoe.png" height="90px">
         
                </div> 
                <br>
