--- a/payment.html
+++ b/payment.html
@@ -216,7 +216,7 @@
                 <h3>Promo</h3>
                 <br>
                <div class="fphoto">
-                <img src="D:\shop\pics\shoe.png" height="90px">
+                <img src="pics\shoe.png" height="90px">
         
                </div> 
                <br>
