--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
                 </div>
                 
             </div>
-        
+        <div class="line"></div>
         </footer>
         <div class="copyright">
             <h5>Copyrights reserved to <span class="vc">ALI SHAHIN</span> </h5>
